removed extra image, fixed extra whitespace at bottom of page

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -5,7 +5,7 @@
 @linkColor: @white;
 @linkColorHover: @gray;
 
-body{
+html, body{
 	background: @bg-color;
 	color: @font-color;
 }
